# django-persistent-messages

./: .pre-commit-config.yaml  .ruff.toml  CHANGELOG  LICENSE  README  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: tox.yml
demo/: settings.py  urls.py  views.py
demo/templates/: _message.html  _serialized_message.html  index.html
persistent_messages/: admin.py  apps.py  context_processors.py  exceptions.py  middleware.py  models.py  shortcuts.py  urls.py  views.py
persistent_messages/migrations/: 0001_initial.py  0002_persistentmessage_target_custom_group_and_more.py
persistent_messages/templatetags/: persistent_message_tags.py
tests/: conftest.py  settings.py  test_context_processors.py  test_middleware.py  test_models.py  test_persistent_messages.py  test_templatetags.py  urls.py  views.py
tests/templates/: custom_response.html
