[tool.poetry]
name = "django-persistent-messages"
version = "0.3"
description = "Wrapper around django.contrib.messages adding persistence."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README"
homepage = "https://github.com/yunojuno/django-persistent-messages"
repository = "https://github.com/yunojuno/django-persistent-messages"
documentation = "https://github.com/yunojuno/django-persistent-messages"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "persistent_messages" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0 || ^5.0"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
